# slates-experiments

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cb_loop.py  cb_simulator.cc  cb_skype_slate_simulator.cc  cb_slate_simulator.cc  loop.py  simulator.cc  skype_slate_simulator.cc  slate_loop.py  slates.py  slates_sim.ipynb  slates_sim_250k.html  slates_sim_25k.html  slates_sim_demo.ipynb  small_scale_simulator.ipynb  test_slates.py
data/no_changes/: simulation_data.csv  simulation_data_432.csv  simulation_data_rescaled.csv  simulation_data_scaledto1.csv
notebook/: Synthetic_Continuous_Multi-Parameter_Scenario.ipynb  simulator_utilities.py  slates.py  slates_sim.ipynb
old_modified_scenarios/original_simulator/: Synthetic_Continuous_Multi-Parameter_Scenario.ipynb
old_modified_scenarios/original_simulator_modified/: Synthetic_Continuous_Multi-Parameter_Scenario.ipynb  simulator_utilities.py
outdated_cpp_attempt/: .gitmodules  README.md  common.h  loop.py  skype_slate_simulator.cc  slate_loop.py
scenario/: Evaluation_Framework_Multi-d_Continuous.ipynb  Simulator_Multi-d_Continuous.ipynb  Synthetic_Continuous_Multi-Parameter_Scenario.ipynb  multi_d_simulator.py  solution.py  trajectory_evaluation.py
skype_tools/: Synthetic_Continuous_Multi-Parameter_Scenario.ipynb
skype_tools/original_simulator/: Synthetic_Continuous_Multi-Parameter_Scenario.ipynb  simulator_utilities.py
skype_tools/original_simulator_modified/: Synthetic_Continuous_Multi-Parameter_Scenario.ipynb  trajectory_evaluation.py
test/: small_scale_simulator.ipynb  test_slates.py
(+1 files in other folders)
